--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "devDependencies": {
     "@bazel/concatjs": "^5.3.0",
-    "@bazel/cypress": "5.3.0",
+    "@bazel/cypress": "^5.3.0",
     "@bazel/typescript": "^5.3.0",
     "@types/node": "14.0.13",
-    "cypress": "9.5.2",
-    "rxjs": "^6.5.2",
-    "typescript": "3.9.5"
+    "cypress": "^9.5.3",
+    "rxjs": "^7.5.5",
+    "typescript": "^4.6.3"
   }
 }
